--- a/polymer-matrix-diagram.html
+++ b/polymer-matrix-diagram.html
@@ -18,7 +18,7 @@
 <link rel="import" href="../polymer-d3/polymer-d3.html">
 
 <!-- ELEMENT -->
-</head><body><polymer-element name="polymer-matrix-diagram" attributes="data config width height paddingLeft paddingRight paddingBottom paddingTop zValue zMin zMax xLabel yLabel cScale duration autoResize autoUpdate" assetpath="build/">
+</head><body><polymer-element name="polymer-matrix-diagram" attributes="data config width height paddingLeft paddingRight paddingBottom paddingTop xLabel yLabel zValue zMin zMax cScale duration autoResize autoUpdate" assetpath="build/">
 
 	<template>
 
@@ -987,8 +987,9 @@ Chart.prototype.init = function() {
 	$.bkgd = null;
 	$.text = null;
 
-	// Meta elements...
-	$.meta = null;
+	// Axis elements...
+	$.xAxis = null;
+	$.yAxis = null;
 	$.xLabel = null;
 	$.yLabel = null;
 
@@ -1068,7 +1069,7 @@ Chart.prototype.create = function() {
 		.createMarks()
 		.createRows()
 		.createCols()
-		.createMeta();
+		.createAxes();
 
 	return this;
 }; // end METHOD create()
@@ -1273,49 +1274,64 @@ Chart.prototype.createCells = function( d, i ) {
 }; // end METHOD createCells()
 
 /**
-* METHOD: createMeta()
-*	Creates the chart meta elements.
+* METHOD: createAxes()
+*	Creates the chart axis elements.
 *
 * @returns {DOMElement} element instance
 */
-Chart.prototype.createMeta = function() {
-	var meta = this.$.meta,
-		pLeft,
-		pTop;
+Chart.prototype.createAxes = function() {
+	var graph = this.$.graph,
+		axis;
 
-	if ( meta ) {
-		meta.remove();
+	// Remove any existing axes...
+	if ( this.$.xAxis ) {
+		this.$.xAxis.remove();
 	}
-	meta = this.$.canvas.append( 'svg:g' )
-		.attr( 'property', 'meta' )
-		.attr( 'class', 'meta' )
-		.attr( 'data-graph-type', 'matrix-diagram' )
-		.attr( 'transform', 'translate(0,0)' );
+	if ( this.$.yAxis ) {
+		this.$.yAxis.remove();
+	}
+	axis = graph.append( 'svg:g' )
+		.attr( 'property', 'axis' )
+		.attr( 'class', 'x axis' );
+	this.$.xAxis = axis;
 
-	this.$.meta = meta;
-
-	pLeft = ( this.paddingLeft === null ) ? this._paddingLeft : this.paddingLeft;
-	pTop = ( this.paddingTop === null ) ? this._paddingTop : this.paddingTop;
-
-	this.$.xLabel = meta.append( 'svg:text' )
+	this.$.xLabel = axis.append( 'svg:text' )
 		.attr( 'property', 'axis.label' )
-		.attr( 'class', 'x label noselect' )
+		.attr( 'class', 'label noselect' )
 		.attr( 'text-anchor', 'middle' )
-		.attr( 'x', (this.graphWidth()/2) + pLeft )
-		.attr( 'y', pTop + 10 )
+		.attr( 'x', this.graphWidth() / 2 )
+		.attr( 'y', -90 )
 		.text( this.xLabel );
 
-	this.$.yLabel = meta.append( 'svg:text' )
+	axis = graph.append( 'svg:g' )
+		.attr( 'property', 'axis' )
+		.attr( 'class', 'y axis' );
+
+	this.$.yLabel = axis.append( 'svg:text' )
 		.attr( 'property', 'axis.label' )
-		.attr( 'class', 'y label noselect' )
+		.attr( 'class', 'label noselect' )
 		.attr( 'text-anchor', 'middle' )
 		.attr( 'transform', 'rotate(-90)' )
-		.attr( 'x', -(this.graphHeight()/2) - pTop )
-		.attr( 'y', 10 )
+		.attr( 'x', -this.graphHeight() / 2 )
+		.attr( 'y', -50 )
 		.text( this.xLabel );
 
 	return this;
-}; // end METHOD createMeta()
+}; // end METHOD createAxes()
+
+/**
+* METHOD: reset()
+*	Resets chart elements.
+*
+* @returns {DOMElement} element instance
+*/
+Chart.prototype.reset = function() {
+	this.resetBase()
+		.resetAxes()
+		.resetCols()
+		.resetRows();
+	return this;
+}; // end METHOD reset()
 
 /**
 * METHOD: resetBase()
@@ -1339,14 +1355,18 @@ Chart.prototype.resetBase = function() {
 }; // end METHOD resetBase()
 
 /**
-* METHOD: resetMarks()
-*	Resets graph mark elements.
+* METHOD: resetAxes()
+*	Resets axis elements.
 *
 * @returns {DOMElement} element instance
 */
-Chart.prototype.resetMarks = function() {
-	return this.resetRows().resetCols();
-}; // end METHOD resetMarks()
+Chart.prototype.resetAxes = function() {
+	this.$.xLabel
+		.attr( 'x', this.graphWidth() / 2 );
+	this.$.yLabel
+		.attr( 'x', -this.graphHeight() / 2 );
+	return this;
+}; // end METHOD resetAxes()
 
 /**
 * METHOD: resetRows()
@@ -1827,8 +1847,7 @@ Chart.prototype.dataChanged = function( oldVal, newVal ) {
 
 	if ( this.autoUpdate ) {
 		// [3] Reset elements:
-		this.resetBase()
-			.resetMarks();
+		this.reset();
 	}
 	this.fire( 'data', {
 		'type': 'changed'
@@ -1892,7 +1911,6 @@ Chart.prototype.configChanged = function( oldConfig, newConfig ) {
 */
 Chart.prototype.widthChanged = function( oldVal, newVal ) {
 	var width,
-		pLeft,
 		dx,
 		err;
 	if ( typeof newVal !== 'number' || newVal !== newVal || newVal <= 0 ) {
@@ -1902,8 +1920,6 @@ Chart.prototype.widthChanged = function( oldVal, newVal ) {
 		return;
 	}
 	width = this.graphWidth();
-
-	pLeft = ( this.paddingLeft === null ) ? this._paddingLeft : this.paddingLeft;
 
 	// [0] Update the x-scale:
 	this._xScale.rangeBands( [ 0, width ] );
@@ -1920,7 +1936,7 @@ Chart.prototype.widthChanged = function( oldVal, newVal ) {
 
 		// [3] Update the x-label:
 		this.$.xLabel
-			.attr( 'x', width/2 + pLeft );
+			.attr( 'x', width / 2 );
 
 		// [4] Update the rows:
 		this.$.rowGridlines
@@ -1963,7 +1979,6 @@ Chart.prototype.widthChanged = function( oldVal, newVal ) {
 */
 Chart.prototype.heightChanged = function( oldVal, newVal ) {
 	var height,
-		pTop,
 		dy,
 		err;
 	if ( typeof newVal !== 'number' || newVal !== newVal || newVal <= 0 ) {
@@ -1973,8 +1988,6 @@ Chart.prototype.heightChanged = function( oldVal, newVal ) {
 		return;
 	}
 	height = this.graphHeight();
-
-	pTop = ( this.paddingTop === null ) ? this._paddingTop : this.paddingTop;
 
 	// [0] Update the y-scale:
 	this._yScale.rangeBands( [ 0, height ] );
@@ -1991,7 +2004,7 @@ Chart.prototype.heightChanged = function( oldVal, newVal ) {
 
 		// [3] Update the y-label:
 		this.$.yLabel
-			.attr( 'x', -height/2 + pTop );
+			.attr( 'x', -height / 2 );
 
 		// [4] Update the rows:
 		this.$.rows
@@ -2065,7 +2078,7 @@ Chart.prototype.paddingLeftChanged = function( oldVal, newVal ) {
 
 		// [3] Update the x-label:
 		this.$.xLabel
-			.attr( 'x', width/2 + pLeft );
+			.attr( 'x', width / 2 );
 
 		// [4] Update the rows:
 		this.$.rowGridlines
@@ -2105,7 +2118,6 @@ Chart.prototype.paddingLeftChanged = function( oldVal, newVal ) {
 */
 Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 	var width,
-		pLeft,
 		dx,
 		err;
 	if ( newVal !== null && (typeof newVal !== 'number' || newVal !== newVal || newVal%1 !== 0 || newVal < 0) ) {
@@ -2115,8 +2127,6 @@ Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 		return;
 	}
 	width = this.graphWidth();
-
-	pLeft = ( this.paddingLeft === null ) ? this._paddingLeft : this.paddingLeft;
 
 	// [0] Update the x-scale:
 	this._xScale.rangeBands( [ 0, width ] );
@@ -2133,7 +2143,7 @@ Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 
 		// [3] Update the x-label:
 		this.$.xLabel
-			.attr( 'x', width/2 + pLeft );
+			.attr( 'x', width / 2 );
 
 		// [4] Update the columns:
 		this.$.cols
@@ -2169,7 +2179,6 @@ Chart.prototype.paddingRightChanged = function( oldVal, newVal ) {
 */
 Chart.prototype.paddingBottomChanged = function( oldVal, newVal ) {
 	var height,
-		pTop,
 		dy,
 		err;
 	if ( newVal !== null && (typeof newVal !== 'number' || newVal !== newVal || newVal%1 !== 0 || newVal < 0) ) {
@@ -2179,8 +2188,6 @@ Chart.prototype.paddingBottomChanged = function( oldVal, newVal ) {
 		return;
 	}
 	height = this.graphHeight();
-
-	pTop = ( this.paddingTop === null ) ? this._paddingTop : this.paddingTop;
 
 	// [0] Update the y-scale:
 	this._yScale.rangeBands( [ 0, height ] );
@@ -2197,7 +2204,7 @@ Chart.prototype.paddingBottomChanged = function( oldVal, newVal ) {
 
 		// [3] Update the y-label:
 		this.$.yLabel
-			.attr( 'y', -height/2 + pTop );
+			.attr( 'x', -height / 2 );
 
 		// [4] Update the columns:
 		this.$.colGridlines
@@ -2264,7 +2271,7 @@ Chart.prototype.paddingTopChanged = function( oldVal, newVal ) {
 
 		// [3] Update the y-label:
 		this.$.yLabel
-			.attr( 'y', -height/2 + pTop );
+			.attr( 'x', -height / 2 );
 
 		// [4] Update the rows:
 		this.$.rows
